--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -1025,8 +1025,17 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** Based on the clasification report, we can tell that 100% of the predicted helath loan were correct and 85% of the predisted high-risk loans were correct. We can also tell that 100% of the actual healthy loans were identified correctly while 95% of the actual high risk loans were identified correctly. We also see that this model has an overall accuracy of 99%. \n",
+    "\n",
+    "All these metrics indicate the logistic regeression model did a good job on predicting both healthy and high risk loans."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
